# hoymiles-mqtt

./: BEFORE_AFTER_COMPARISON.md  COMMIT_MESSAGE.md  CRITICAL_FIX_APPLIED.md  CUSTOM_INTEGRATION_INSTALL.md  DOCKER_COMPOSE_GUIDE.md  Dockerfile  FINAL_DIAGNOSTIC_STEPS.md  HOME_ASSISTANT_SETUP.md  IMPLEMENTATION_SUMMARY.md  INFLUXDB_DATABASE_CHANGE.md  INTEGRATION_COMPARISON.md  MIGRATION_GUIDE.md  MYSQL_SUPPORT_ADDED.md  QUICK_START.md  README.md  README_V2.md  TESTING_WEBSOCKET_FIX.md  TEST_FIXES_SUMMARY.md  TROUBLESHOOTING.md  UPGRADE_v0.12.md  WEBSOCKET_CONNECTION_FIX.md  WEBSOCKET_DIAGNOSIS.md  WEBSOCKET_FIX_SUMMARY.md  check_ha_logs.sh  check_influxdb_data.py  config.yaml.example  diagnose_websocket.sh  docker-compose.custom-port.yml  docker-compose.user.yml  home_assistant_sensors.yaml  lovelace_dashboard.yaml  pyproject.toml  verify_ha_data.sh
custom_components/hoymiles_smiles/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  sensor.py  websocket_server.py
hoymiles_smiles/: __main__.py  config.py  db_adapter.py  health.py  persistence.py  runners.py  websocket_client.py
tests/: test_config.py  test_main.py  test_persistence.py
