[tool]
[tool.poetry]
name = "hoymiles-smiles"
version = "1.0.0"
homepage = "https://github.com/wasilukm/hoymiles-smiles"
description = "Hoymiles S-Miles: Store and monitor data from Hoymiles photovoltaic installations."
authors = ["Mariusz Wasiluk"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
packages = [
    { include = "hoymiles_smiles" },
    { include = "custom_components/hoymiles_smiles" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Core dependencies
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
mysql-connector-python = "^9.1.0"
hoymiles-modbus = "^0.10.0"
ConfigArgParse = "^1.5.3"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.20.0"
pytz = "^2024.1"
aiohttp = "^3.9.0"
tenacity = "^8.2.3"

# Development dependencies
black  = {version = "^24.8.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^7.1.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^1", optional = true}
pytest  = { version = "^8.3.2", optional = true}
pytest-cov  = { version = "^5.0.0", optional = true}
pytest-asyncio = { version = "^0.23.0", optional = true}
tox  = { version = "^4.17.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
mkdocs  = { version = "^1.6.0", optional = true}
mkdocs-include-markdown-plugin  = { version = "^6.0.0", optional = true}
mkdocs-material  = { version = "^9.0.11", optional = true}
mkdocstrings = {version = "^0.25.2", extras = ["python"], optional = true}
mkdocs-material-extensions  = { version = "^1.1.1", optional = true}
twine  = { version = "^5.1.1", optional = true}
mkdocs-autorefs = {version = ">=0.3.1", optional = true}
pre-commit = {version = "^3.8.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
